<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GPDAccounting</string>
    <string name="data_ok">确认记录</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="input_money">输入花费金额</string>
    <string name="input_remark">备注</string>
    <string name="spinner_1">买菜</string>
    <string name="spinner_2">交通</string>
    <string name="spinner_3">家具</string>
    <string name="spinner_4">房租</string>
    <string name="spinner_5">吃饭</string>
    <string name="data_delete">删除</string>
    <string name="data_select">修改</string>
    <string name="set_username">用户名</string>
    <string name="set_passwords">密码</string>
    <string name="set_repeat_passwords">重复密码</string>
    <string name="set_ok">保存设置</string>
    <string name="set_info_uncomplete_error">输入信息不完整</string>
    <string name="set_passwords_differents_error">两次输入密码不相同</string>
    <string name="save_data_success">数据保存成功</string>
    <string name="set_have_user">已有用户名</string>
    <string name="login_ok">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="register">注册</string>
    <string name="login_error">用户名密码错误</string>
    <string name="statistics">统计</string>
    <string name="date">日期</string>
    <string name="username">用户名</string>
    <string name="money">金钱</string>
    <string name="remark">备注</string>
    <string name="data_select_error">数据更新失败</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="all">全部</string>
    <string name="show_txt">从%1$s至%2$s，%3$s共花费金钱%4$s。</string>
    <string name="settings">设置</string>
    <string name="title">标题</string>
    <string name="main">主页</string>
    <string name="list">列表</string>
    <string name="take_photo">拍照</string>
    <string name="pick_photo">从相册选择</string>
    <string name="more_remark">详细描述</string>
    <string name="deleted">删除</string>
    <string name="change_user">切换用户</string>
    <string name="clock_image">图片加密</string>

</resources>
