<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fullscreen_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Main" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:ignore="NestedWeights" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/data_user_image"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@color/back_color"
                    android:contentDescription="@string/all"
                    android:src="@drawable/background" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/data_user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:ellipsize="end"
                        android:maxLength="7"
                        android:text="@string/all" />

                    <Button
                        android:id="@+id/data_user_change"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="@drawable/item_button"
                        android:text="@string/change_user" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/clock_image"
                android:id="@+id/data_image_clock"
                android:background="@drawable/item_button" />
        </LinearLayout>

        <ImageView
            android:id="@+id/data_image"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/back_color"
            android:contentDescription="@string/all"
            android:src="@drawable/background" />
    </LinearLayout>

    <EditText
        android:id="@+id/data_more_remark"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textMultiLine" >
    </EditText>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/data_input_money"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="10dp"
            android:layout_weight="2"
            android:background="@drawable/item_button"
            android:ems="10"
            android:hint="@string/input_money"
            android:inputType="numberDecimal"
            tools:ignore="NestedWeights" >
        </EditText>

        <Button
            android:id="@+id/data_ok_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/my_button"
            android:text="@string/data_ok" />
    </LinearLayout>

</LinearLayout>