<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Statistics" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/statistics_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/Item_name_color"
                android:layout_gravity="center"
                android:text="@string/start_time" />

            <DatePicker
                android:id="@+id/statistics_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/item_button" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/statistics_end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/Item_name_color"
                android:text="@string/end_time" />

            <DatePicker
                android:id="@+id/statistics_end_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/item_button"
                />
        </TableRow>
    </LinearLayout>

    <Spinner
        android:id="@+id/statistics_user_spinner"
        android:layout_margin="10dp"
        android:background="@drawable/item_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/statistics_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/my_button"
        android:text="@string/statistics" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/statistice_show_txt"
               	android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                />

        </LinearLayout>
    </ScrollView>

</LinearLayout>